Add bulk operation.